# book-python-pytest-9781680508604

./: .gitignore  README.md
exercise/: .editorconfig
exercise/ch1/: test_ex1.py  test_ex2.py  test_ex3.py
exercise/ch10/: pytest.ini  test_cli.py  test_cli_alt.py  test_mock.py  test_typer_testing.py
exercise/ch12/: pyproject.toml  pytest.ini
exercise/ch13/: pyproject.toml
exercise/ch13/cards_proj/: pyproject.toml  tox.ini
exercise/ch14/: pyproject.toml
exercise/ch16/: pytest.ini  test_ids.py  test_indirect.py  test_multiple.py  test_optional.py  test_param_gen.py  test_subset.py
exercise/ch2/: pyproject.toml  test_alt_fail.py  test_card.py  test_card_fail.py  test_classes.py  test_exceptions.py  test_experiment.py  test_helper.py  test_structure.py
exercise/ch3/: pyproject.toml  test_autouse.py  test_count.py  test_fixtures.py  test_mod_scope.py
exercise/ch4/: conftest.py  test_hello_world.py  test_print.py  test_version.py
exercise/ch5/: test_ex_start.py  test_ex_start_fix_param.py  test_ex_start_func_param.py  test_ex_start_gen.py  test_finish.py  test_finish_combined.py  test_func_param.py
exercise/ch6/: pyproject.toml
exercise/ch6/builtins/: test_skipif.py  test_xfail.py
exercise/ch6/combined/: conftest.py  pytest.ini  test_num_cards.py  test_three_cards.py
exercise/ch6/exercises/: pytest.ini  test_markers.py
exercise/ch6/multiple/: pytest.ini  test_finish.py
exercise/ch6/reg/: test_start.py
exercise/ch6/smoke/: test_start.py  test_start_unmarked.py
exercise/ch8/: pytest.ini
exercise/ch9/: .coveragerc  pyproject.toml
(+32 files in other folders)
