[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
cards = {path = "./cards_proj", develop = true}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.0.0"
tox = "^4.20.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
